[package]
name = "rust_to_do"
version = "0.1.0"
edition = "2021"

keywords = ["rest", "test", "axum"]
categories = ["concurrency", "rest-api"]

[[bin]]
name = "rust_to_do"
path = "src/main.rs"
test = false
bench = false

[dependencies]
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"

# Axum/tokio
axum = { version = "0.7.5", features = ["default"] }
tokio = { version = "1.38.0", features = ["full", "macros"] }
hyper = { version = "1.3.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

# others
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
log = { version = "0.4.21", features = ["std", "serde"] }
env_logger = { version = "0.11.3" }
config-file = {version = "0.2.3"}
